--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.19.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "node": "^22.8.0",
     "nodemon": "^3.1.4",
